--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "aws-sdk": "^2.1.12",
     "bcrypt": "^0.8.1",
     "body-parser": "^1.9.3",
-    "events": "^1.0.2",
+    "csurf": "^1.7.0",
     "express": "^4.2.0",
     "express-session": "^1.10.1",
     "multer": "^0.1.7",
